# csci-310-matrix-multiply

./: .gitignore  CMakeLists.txt  Makefile  README.md  matrix_multiplication_functions.cpp  matrix_multiplication_functions.h  matrix_multiplication_parallel.cpp  matrix_multiplication_serial.cpp  matrix_multiplication_serial_blocked.cpp  matrix_multiplication_serial_blocked_runner.cpp  matrix_multiplication_serial_sweep_runner.cpp  matrix_multiplication_sweep.cpp  my_diff.cpp  print_matrix.cpp
data/: dgemm_matrix_multiply_performance_flops_data.csv  dgemm_matrix_multiply_performance_time_data.csv  serial_matrix_multiply_performance_flops_data.csv  serial_matrix_multiply_performance_time_data.csv  sweep_matrix_multiply_performance_flops_data.csv  sweep_matrix_multiply_performance_time_data.csv
latex/: ShawTronsenAguilera_GlobalEthical.docx  my_stack.c  my_stack.h  student.c  student.h
report/: tronsen_openmp_3.ipynb
scripts/: serial_dgemm_runner_script  serial_reg_runner_script  sweep_script
